{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 42,
  "lineage": "fd7c9924-0bfa-4634-7ecc-c253de3ffd89",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "top_jokes_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b33fadde916dd0d9",
            "domain": "vpc",
            "id": "eipalloc-0c86d70e8cd763d2d",
            "instance": "i-0c73c3a98c619c7af",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0b786e9c21a8028cf",
            "private_dns": "ip-10-0-1-231.us-east-2.compute.internal",
            "private_ip": "10.0.1.231",
            "public_dns": "ec2-13-59-17-138.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.17.138",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.top_jokes_api",
            "aws_key_pair.tja_ssh",
            "aws_security_group.tja_secGroup",
            "aws_subnet.tja_subnet",
            "aws_vpc.tja_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "top_jokes_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d72852800cbf29e",
            "arn": "arn:aws:ec2:us-east-2:409304209072:instance/i-0c73c3a98c619c7af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c73c3a98c619c7af",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tja_ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b786e9c21a8028cf",
            "private_dns": "ip-10-0-1-231.us-east-2.compute.internal",
            "private_ip": "10.0.1.231",
            "public_dns": "ec2-3-138-118-231.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.118.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0895793396413202c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032744c40d3083872",
            "tags": {
              "Name": "TopJokesAPI",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c1dfeeee8dd3e5fe"
            ]
          },
          "dependencies": [
            "aws_key_pair.tja_ssh",
            "aws_security_group.tja_secGroup",
            "aws_subnet.tja_subnet",
            "aws_vpc.tja_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tja_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:409304209072:internet-gateway/igw-05ef1c533c46dc76f",
            "id": "igw-05ef1c533c46dc76f",
            "owner_id": "409304209072",
            "vpc_id": "vpc-01feef88175d24fe0"
          },
          "dependencies": [
            "aws_vpc.tja_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tja_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:409304209072:route-table/rtb-04b5b54fa818b10ff",
            "id": "rtb-04b5b54fa818b10ff",
            "owner_id": "409304209072",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ef1c533c46dc76f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-01feef88175d24fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tja_vpc",
            "aws_internet_gateway.tja_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom-rt-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e6fcc6c7a6cfcf1",
            "route_table_id": "rtb-04b5b54fa818b10ff",
            "subnet_id": "subnet-032744c40d3083872"
          },
          "dependencies": [
            "aws_internet_gateway.tja_gateway",
            "aws_route_table.tja_route",
            "aws_subnet.tja_subnet",
            "aws_vpc.tja_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tja_secGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:409304209072:security-group/sg-0c1dfeeee8dd3e5fe",
            "description": "Allow inbount tcp to port: 2077, 8080, 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1dfeeee8dd3e5fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API access",
                "from_port": 2077,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2077
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tja_secGroup",
            "name_prefix": "",
            "owner_id": "409304209072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01feef88175d24fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tja_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tja_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:409304209072:subnet/subnet-032744c40d3083872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-032744c40d3083872",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "409304209072",
            "vpc_id": "vpc-01feef88175d24fe0"
          },
          "dependencies": [
            "aws_vpc.tja_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tja_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:409304209072:vpc/vpc-01feef88175d24fe0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0482d43410480117a",
            "default_route_table_id": "rtb-0199831c0ee02663b",
            "default_security_group_id": "sg-0358cba81b2f8da00",
            "dhcp_options_id": "dopt-6d87e506",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01feef88175d24fe0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0199831c0ee02663b",
            "owner_id": "409304209072"
          }
        }
      ]
    }
  ]
}